<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.PrincipalActivity"
    tools:showIn="@layout/activity_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textSaudacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_loading"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_saldo"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_saldo_geral"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="#00F"
        app:mcv_tileSize="50dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerMovimentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>